fix: fixing Color Contrast Accessibility Validator issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -197,7 +197,7 @@ footer h5 {
 
 #hero-overlay {
     height: 320px;
-    background-color: rgba(0, 0, 0, 0.15);
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 #title-overlay, #subtitle-overlay{
@@ -216,6 +216,7 @@ footer h5 {
 }
 
 #subtitle-overlay {
+    color: #000;
     padding: 8px;
     border-radius: 10px;
     background-color: rgba(196,196,196,0.6);
